syntax = "proto3";

package pb.account;

option go_package = "github.com/kodinggo/gb-2-api-account-service";

import "pb/account/account.proto";

message FindByIDsRequest {
    repeated int64 ids = 1;
}

service AccountService {
    rpc FindByIDs(FindByIDsRequest) returns (Account) {}
}
